tolerant-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tolerant-pod
  namespace: dev
spec:
  tolerations:
    - key: "key"
      operator: "Equal"
      value: "value"
      effect: "NoSchedule"
  containers:
    - name: web
      image: my-repo/tolerant-app:latest
