service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-service
  namespace: dev
spec:
  selector:
    app: ecommerce
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
